Add image input and model picker to AI chat
- POST /ai/chat/upload-image stores chat images via EruptFileService
  (image extension whitelist); /send accepts an images path array,
  persisted on AiChatMessage
- Multimodal streaming: EruptAiChat gains a List<Content> variant that
  bypasses prompt templating; LlmCore routes to it when images exist
- LLMService resolves image attachments (local or remote AttachmentProxy)
  to base64 ImageContent, also when rebuilding history context
- GET /ai/chat/llms lists enabled models (LlmVo, credentials excluded)
  for the frontend model picker

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>